--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -49,6 +51,7 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.8.0'
+    implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.5.1'
     implementation platform('androidx.compose:compose-bom:2022.10.00')
@@ -56,6 +59,25 @@ dependencies {
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
+    implementation "androidx.compose.ui:ui-util:1.4.3"
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
+
+    //hilt
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
+    implementation "com.google.dagger:hilt-android:2.46.1"
+    annotationProcessor 'com.google.dagger:hilt-compiler:2.46.1'
+    kapt "com.google.dagger:hilt-compiler:2.46.1"
+
+
+
+    //navigation
+    implementation 'androidx.navigation:navigation-compose:2.6.0'
+    implementation 'androidx.compose.material:material:1.4.3'
+
+    implementation 'com.google.accompanist:accompanist-systemuicontroller:0.31.5-beta'
+
+    implementation "com.google.accompanist:accompanist-pager:0.12.0"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
